cmake_minimum_required(VERSION 3.14)
project(algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm
        15.cpp
        16.cpp
        17.cpp
        18.cpp
        19.cpp
        22.cpp
        23.cpp
        24.cpp
        25.cpp
        31.cpp
        33.cpp
        34.cpp
        36.cpp
        37.cpp
        39.cpp
        40.cpp
        41.cpp
        43.cpp
        46.cpp
        47.cpp
        48.cpp
        49.cpp
        50.cpp
        54.cpp
        55.cpp
        56.cpp
        57.cpp
        58.cpp
        60.cpp
        61.cpp
        62.cpp
        63.cpp
        64.cpp
        73.cpp
        74.cpp
        75.cpp
        77.cpp
        78.cpp
        79.cpp
        80.cpp
        82.cpp)
